# mpv-rich-presence

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  NOTICE  README.md  clang-format.ps1  clang-format.sh  vcpkg.json
include/mpv_rich_presence/: discord_api.hpp  discord_utils.hpp  mpv_utils.hpp  rich_presence_state.hpp  utils.hpp
script-opts/: rich-presence.conf
scripts/: rich-presence-conf.lua
src/: discord_api.cpp  discord_utils.cpp  main.cpp  mpv_rich_presence.cpp  mpv_utils.cpp  utils.cpp
